--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous">
   </script>
-  <script type="text/javascript" src="../sjcl.js"></script>
+  <script type="text/javascript" src="sjcl.js"></script>
   <script>
   var pair
     function loaded() {        
